Bug 1769413 - Treat start/end-of-text as a word boundary for the Find-in-Page whole-words option, even when the adjacent character is punctuation. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D150247